test/JDBC/expected/test_windows_login-vu-prepare.out
CREATE DATABASE ad_db;
GO

CREATE LOGIN PassWordUser with PASSWORD='123';
GO

CREATE LOGIN [ad\Aduser] from windows;
GO

CREATE LOGIN [ad\Aduserdb] from windows with default_database=[ad_db];
GO

CREATE LOGIN [ad\Aduserlanguage] from windows with default_language=[German];
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: '[German]' is not currently supported in Babelfish. please use babelfishpg_tsql.escape_hatch_language_non_english to ignore)~~


CREATE LOGIN [ad\Aduserdblanguage] from windows with default_database=[ad_db], default_language=[German];
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: '[German]' is not currently supported in Babelfish. please use babelfishpg_tsql.escape_hatch_language_non_english to ignore)~~


CREATE LOGIN [ad\AduserdblanguageEnglish] from windows with default_database=[ad_db], default_language=[English];
GO

CREATE LOGIN [ad\Aduseroption] from windows with CHECK_POLICY = OFF, CHECK_EXPIRATION = OFF;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '=' at line 1 and character position 62)~~


